--- a/index.html
+++ b/index.html
@@ -124,14 +124,16 @@
                             <i class="fa-solid fa-user"></i>Micheal Sinkamba
                         </li>
                         <li>
-                            <i class="fa-solid fa-location-dot"></i>Lusaka Zambia </li>
+                            <i class="fa-solid fa-location-dot"></i>Lusaka Zambia
+                        </li>
                         <li>
                             <i class="fa-regular fa-envelope"></i>michaelsinkamba211@gmail.com
                         </li>
                         <li>
-                            <i class="fa-solid fa-phone"></i>+260 974286888</li>
+                            <i class="fa-solid fa-phone"></i>+260-974286888
+                        </li>
                         <li>
-                            <i class="fa-solid fa-graduation-cap"></i> Computer Science (3rd year)
+                            <i class="fa-solid fa-graduation-cap"></i>Computer Science (3rd year)
                         </li>
                     </ul>
 
