--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <script src="script.js"></script>
+    <meta name="msvalidate.01" content="5CC90E0AFEAC7D9AE53D230F6BFC4D3F" />
 </head>
 <body>
 
