--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
             <div class="sub-repair">
                 <div class="iphone-services">
                     <i class="fa-solid fa-mobile-screen"></i>
-                    <h3>IPhones</h3>
+                    <h3>iPhones</h3>
                     <ul>
-                        <li>IOS updating</li>
+                        <li>iOS updating</li>
                         <li>Forgot iCloud details</li>
                         <li>Network Unlocking</li>
                     </ul>
