--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="home-personal-content">
             <h2>Hello i'm</h2>
             <h1>Micheal Sinkamba</h1>
-            <h3>Frontend Developer | Software Repair Expert</h3>
+            <h3>Web Frontend Developer | Software Repair Expert</h3>
             <p>
                 I specialize in creating captivating web experiences and also excel in software phone repairs.
             </p>
