--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         
         <span id="works"></span>
         <div class="tittle">
-            <h1 >Services <br> <p>see what i've done</p></h1>
+            <h1 >Services <br> <p>see what I do</p></h1>
         </div>
         <div class="coding">
             <div class="sub-tittle">
