--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             
             <ul class="main-ul">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#works">Works</a></li>
-                <li><a href="#contact">Contact me</a></li>
+                <li><a href="#contact">Contact</a></li>
 
                 <div class="bottom_links">
                     <a class="cv_for_mobile" href="./images/cv.JPG" download> My CV</a>
