--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="app-development">
                     <i class="fa-solid fa-mobile-screen"></i>
 
-                    <h3>App Development</h3>
+                    <h3>Backened Development</h3>
                     <a href="#">coming soon</a>
                 </div>
             </div>
@@ -340,7 +340,8 @@
                 <div class="third-coding-work">
                     <div class="frontend-development        school">
                     </div>
-                    <h3>School Management System</h3>
+        
+                    <h3>Restaurant Website</h3>
                     <a href="#">comming soon</a>
                 </div>
                 
