--- a/index.html
+++ b/index.html
@@ -338,11 +338,10 @@
                 </div>
 
                 <div class="third-coding-work">
-                    <div class="frontend-development        school">
+                    <div class="frontend-development school">
                     </div>
-        
                     <h3>Restaurant Website</h3>
-                    <a href="#">comming soon</a>
+                    <a href="#">coming soon</a>
                 </div>
                 
             </div>
