--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a href="#contact">Contact</a></li>
 
                 <div class="bottom_links">
-                    <a class="cv_for_mobile" href="./images/cv.JPG" download> My CV</a>
+                    <a class="cv_for_mobile" href="./images/Micheal Sinkamba CV.JPG" download> My CV</a>
                     <a class="hire-me" href="https://wa.me/message/WSQ463DN4ZDRK1" target="_blank"> Hire Me</a>
                 </div>
                 
