--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#works">Works</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Contact me</a></li>
 
                 <div class="bottom_links">
                     <a class="cv_for_mobile" href="./images/Micheal Sinkamba CV.JPG" download> My CV</a>
