--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <section class="contact">
         
         <div class="tittle">
-            <h1 >Contact Me <br> <p>connect with me</p></h1>
+            <h1 >Contact Me <br> <p>Need a website or iDevice fix? Message me!</p></h1>
         </div>
        
         <div class="form">
