--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Micheal Sinkamba Portfolio Website | lets code 👨‍💻 </title>
+    <title>Micheal Sinkamba Portfolio Website | lets code </> </title>
     <link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:500, 550,300,400,450,700&amp;display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/018d9ba538.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
