--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h1>Micheal Sinkamba</h1>
             <h3>Web Frontend Developer | Software Repair Expert</h3>
             <p>
-                I specialize in creating captivating web experiences and also excel in software phone repairs.
+                I specialize in creating captivating web experiences and also excel in software iPhone repairs.
             </p>
             <div class="home-links">
                 <a href="./images/Micheal Sinkamba CV.JPG" download>My CV</a>
