--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
                             <li>
                                 <i class="fa-regular fa-envelope"></i>michaelsinkamba211@gmail.com
                             </li>
-                            <li>
-                                <i class="fa-solid fa-phone"></i>+260 974286888</li>
-                            <li>
+                            <li class="test">
+                                <i class="fa-solid fa-phone"></i>
+                                <a href="tel:+260974286888" style="pointer-events: none;">+260 9742 86888</a>
+                            </li>
                                 <i class="fa-solid fa-graduation-cap"></i> Computer Science (3rd year)
                             </li>
                         </ul>
