--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             </li>
                             <li class="test">
                                 <i class="fa-solid fa-phone"></i>
-                                <a href="tel:+260974286888" style="pointer-events: none;">+260 9742 86888</a>
+                                <a href="tel:+260974286888" style="pointer-events: none;">+26-0974-2868-88</a>
                             </li>
                                 <i class="fa-solid fa-graduation-cap"></i> Computer Science (3rd year)
                             </li>
