--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
                         <a href="#">learn more</a>
                     </div>
 
+                    <div class="backened-development">
+                        <i class="fa-solid fa-book"></i>
+                        <h3>Student Assignment Solutions</h3>
+                        <a href="#">learn more</a>
+                    </div>
+
                     <div class="app-development">
                         <i class="fa-solid fa-mobile-screen"></i>
 
