added descriptions to services

--- a/index.html
+++ b/index.html
@@ -198,25 +198,38 @@
                     <div class="frontend-development">
                         <i class="fa-solid fa-code"></i>
                         <h3>Web Development</h3>
-                        <a href="#">learn more</a>
+                        <p>
+                            We create websites that work well, look nice, and do cool things.
+                        </p>
+                        <a href="#contact">Get Started</a>
                     </div>
         
                     <div class="backened-development">
                         <i class="fa-solid fa-toolbox"></i>
+                        
                         <h3>Web Dev Consultant</h3>
-                        <a href="#">learn more</a>
+                        <p>
+                            We help your website be better and give advice for improvements
+                        </p>
+                        <a href="#contact">Talk Now</a>
                     </div>
 
                     <div class="backened-development">
                         <i class="fa-solid fa-book"></i>
                         <h3>Student Assignment Solutions</h3>
-                        <a href="#">learn more</a>
+                        <p>
+                            We help students do schoolwork and homework better so they learn well.
+                        </p>
+                        <a href="#contact">Connect Today</a>
                     </div>
 
                     <div class="app-development">
                         <i class="fa-solid fa-mobile-screen"></i>
 
                         <h3>Backened Development</h3>
+                        <p>
+                            We make sure websites run smoothly and stay safe with strong systems.
+                        </p>
                         <a href="#">coming soon</a>
                     </div>
                 </div>
