--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
                     <input type="email" id="user_email" name="email" class="email" placeholder="Your Email" required>
 
-                    <textarea style="resize: none;" id="message" name="message" class="message" cols="30" rows="10" required>Hello Micheal ,I want
+                    <textarea style="resize: none;" id="message" name="message" class="message" cols="30" rows="10" required>Hello Micheal, I want.
                     </textarea>
 
                     <button class="submit-btn" type="submit">
