--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
                 
-                <a href="https://instagram.com/fiero_technologies?igshid=MmIzYWVlNDQ5Yg==" target="_blank">
+<!--                 <a href="https://instagram.com/fiero_technologies?igshid=MmIzYWVlNDQ5Yg==" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
-                </a>
+                </a> -->
                 
             </div>
 
