changed name color

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <div class="home-personal-content">
                 <h2>Hello i'm</h2>
-                <h1>Micheal Sinkamba</h1>
+                <h1><span id="first-part-of-name">  Micheal Sinkamba </span> </h1>
                 <h3>Web Frontend Developer | Software Repair Expert</h3>
                 <p>
                     I specialize in creating captivating web experiences and also excel in software iPhone repairs.
