--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header  class="main-header">
             <section class="top-header">
             <nav class="main-nav">
-                <div class="logo"> <span id="first-part-of-name">Mich</span><span id="second-part-of-name">ael</span>.</div>
+                <div class="logo"> <span id="first-part-of-name">Mich</span><span id="second-part-of-name">eal</span>.</div>
                 <input class="menu" type="checkbox" name="" id="menu-bar">
                 <label for="menu-bar" class="menu-bars">
             
@@ -385,7 +385,7 @@
                 Copyright © 2023 | Micheal Sinkamba®. All Rights Reserved
             </p>
 
-            <div class="logo"></span><span id="first-part-of-name">Mich</span><span id="second-part-of-name">ael</span>.</div>
+            <div class="logo"></span><span id="first-part-of-name">Mich</span><span id="second-part-of-name">eal</span>.</div>
             
         </footer>
 
