--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Micheal Sinkamba Portfolio Website | Lets &lt;/code&gt; </title>
-        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+<!--         <link rel="icon" type="image/x-icon" href="./images/favicon.ico"> -->
+        <link type="image/png" href="./images/favicon.ico" rel="apple-touch-icon">
+        <link type="image/png" href="./images/favicon.ico" rel="icon">
+        
         <link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:500, 550,300,400,450,700&amp;display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/018d9ba538.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
