--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <p>
                             We boost website rankings and attract more visitors through strategic optimization.
                         </p>
-                        <a href="#">Lets chat</a>
+                        <a href="#">Let's Chat</a>
                     </div>
 
                     <div class="backened-development">
