--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <header  class="main-header">
             <section class="top-header">
             <nav class="main-nav">
-                <div class="logo"> <span id="first-part-of-name">Mich</span><span id="second-part-of-name">eal</span>.</div>
+                <div class="logo"> <span id="first-part-of-name">Micheal</span><span id="second-part-of-name"> Sinkamba</span>.</div>
                 <input class="menu" type="checkbox" name="" id="menu-bar">
                 <label for="menu-bar" class="menu-bars">
             
