--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                             <li><a href="#contact">Contact me</a></li>
 
                             <div class="download">
-                                <a class="cv_for_mobile" href="./images/Micheal Sinkamba CV.JPG" download> My CV</a>
-                                <a class="hire-me" href="https://wa.me/message/WSQ463DN4ZDRK1" target="_blank"> Hire Me</a>
+                                <a class="cvs" href="./images/Micheal Sinkamba CV.JPG" download> My CV</a>
+                                <a class="cvs" href="https://wa.me/message/WSQ463DN4ZDRK1" target="_blank"> Hire Me</a>
                             </div>
                         </ul>
                     </nav>
