--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <!-- favicon -->
+            <link rel="apple-touch-icon" sizes="180x180" href="/favicon_package/apple-touch-icon.png">
+            <link rel="icon" type="image/png" sizes="32x32" href="/favicon_package/favicon-32x32.png">
+            <link rel="icon" type="image/png" sizes="16x16" href="/favicon_package/favicon-16x16.png">
+            <link rel="manifest" href="/favicon_package/site.webmanifest">
+            <link rel="mask-icon" href="/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
+            <meta name="msapplication-TileColor" content="#da532c">
+            <meta name="theme-color" content="#ffffff">
+            <!-- favicon -->
         <title>Micheal Sinkamba Portfolio Website | Lets &lt;/code&gt; </title>
-<!--         <link rel="icon" type="image/x-icon" href="./images/favicon.ico"> -->
-
-        <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
-        <link rel="manifest" href="./favicon_io/site.webmanifest">
         
         <link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:500, 550,300,400,450,700&amp;display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/018d9ba538.js" crossorigin="anonymous"></script>
