--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 <form id="contact-form" onsubmit="return validateForm()">
                     <input type="text" id="user_name" name="name" class="name" placeholder="Your Name" required>
                     <input type="email" id="user_email" name="email" class="email" placeholder="Your Email" required>
-                    <textarea style="resize: none;" id="message" name="message" class="message" cols="30" rows="10" required>Hello Michael, I want.</textarea>
+                    <textarea style="resize: none;" id="message" name="message" class="message" cols="30" rows="10" placeholder="Your Message to Michael" required></textarea>
                     <button class="submit-btn" type="submit">Send</button>
                 </form>
             </div>
