added new project

--- a/index.html
+++ b/index.html
@@ -361,15 +361,16 @@
                         <div class="frontend-development  portfolio">
                             
                         </div>
-                        <h3>Portfolio Website</h3>
+                        <h3>My Portfolio Website</h3>
                         <a href="#">visit site</a>
                     </div>
 
                     <div class="third-coding-work">
                         <div class="frontend-development school">
                         </div>
-                        <h3>Restaurant Website</h3>
-                        <a href="#">coming soon</a>
+                        <h3>Zed Chyna Portfolio Website</h3>
+        
+                        <a href="https://zedchynaplug.com/"  target="_blank">visit site</a>
                     </div>
 
                     <div class="third-coding-work">
