--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <li><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#services">Services</a></li>
-                            <li><a href="#works">Works</a></li>
+                            <li><a href="#works">Projects</a></li>
                             <li><a href="#contact">Contact me</a></li>
 
                             <div class="downloads">
@@ -345,7 +345,7 @@
         <section class="works">
 
             <div class="tittle">
-                <h1>Works</h1>
+                <h1>Projects</h1>
             </div>
             <div class="coding">
 
