added new project (VamEngineers)

--- a/index.html
+++ b/index.html
@@ -374,6 +374,13 @@
                     </div>
 
                     <div class="third-coding-work">
+                        <div class="frontend-development vam">
+                        </div>
+                        <h3>VamEngineers Company Website</h3>
+                        <a href="https://vamengineers.com/" target="_blank">visit site</a>
+                    </div>
+
+                    <div class="third-coding-work">
                         <div class="frontend-development ecommerce">
                         </div>
                         <h3>Simple Ecommerce Website</h3>
