--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
             <link rel="manifest" href="/site.webmanifest">
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
+            <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-W9HQSSDW');</script>
+    <!-- End Google Tag Manager -->
             <!-- favicon -->
         <title>Micheal Sinkamba Portfolio Website | Lets &lt;/code&gt; </title>
         
@@ -42,6 +49,10 @@
         
     </head>
     <body class="smooth-scroll">
+        <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W9HQSSDW"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
                <!-- header -->
         <!-- header -->
         <header>
