added personal portfolio website

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="downloads">
 
                                 <span>
-                                    <a class="cvs" href="./images/Micheal Sinkamba CV.JPG" download> My CV</a>
+                                    <a class="cvs" href="./orthers/Micheal Sinkamba CV.pdf" download> My CV</a>
                                 </span>
 
                                 <span>
@@ -129,7 +129,7 @@
                     I specialize in creating captivating web experiences and also excel in software iPhone repairs.
                 </p>
                 <div class="home-links">
-                    <a href="./images/Micheal Sinkamba CV.JPG" download>My CV</a>
+                    <a href="./orthers/Micheal Sinkamba CV.pdf" download>My CV</a>
                     <a href="https://wa.me/message/WSQ463DN4ZDRK1" target="_blank" id="last"> Hire Me</a>
                 </div>
                 
