added new Project

--- a/index.html
+++ b/index.html
@@ -390,6 +390,12 @@
                         <h3>VamEngineers Company Website</h3>
                         <a href="https://vamengineers.com/" target="_blank">visit site</a>
                     </div>
+                    <div class="third-coding-work">
+                        <div class="frontend-development clinic">
+                        </div>
+                        <h3>Clinic Website Template</h3>
+                        <a href="https://michaelsinkamba.com/fierotechsclinic/" target="_blank">visit site</a>
+                    </div>
 
                     <div class="third-coding-work">
                         <div class="frontend-development ecommerce">
