--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <div class="frontend-development simple-life">
                         </div>
                         <h3>Simple Life Website</h3>
-                        <a href="https://michaelsinkamba211.github.io/simplelife/" target="_blank">visit site</a>
+                        <a href="https://michaelsinkamba.com/simplelife/" target="_blank">visit site</a>
                     </div>
 
                     <div class="second-coding-work">
