--- a/fierotechsclinic/index.html
+++ b/fierotechsclinic/index.html
@@ -38,7 +38,7 @@
             <div class="essential_container">
                 <div class="logo">
                     <h1 class="doc_logo">
-                        Dr.<span id="special">Fiero</span>
+                        <a href="./index.html">Dr.<span id="special">Fiero</span></a>
                     </h1>
                 </div>
 
@@ -58,14 +58,16 @@
                         <p class="icon">
                             <span class="fa-solid fa-paper-plane fa-beat-fade"></span>
                         </p>
-                        <p class="email">Email: michaelsinkamba211@email.com</p>
+                        <p class="email"><a target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&to=michaelsinkamba211@email.com">Email: michaelsinkamba211@email.com</a>
+                        </p>
                     </div>
 
                     <div class="phone">
                         <p class="icon">
                             <i class="fa-solid fa-phone fa-beat-fade"></i>
                         </p>
-                        <p class="number">Phone: +2609 742868 88</p>
+                        <p class="number"><a href="tel:+260974286888" target="_blank">Phone: +2609 742868 88</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -85,7 +87,7 @@
                         </label>
 
                         <div class="appointment">
-                            <a href="#" class="make_apo"> <span>Make An</span> Appointment</a>
+                            <a href="#contacts" class="make_apo"> <span>Make An</span> Appointment</a>
                         </div>
                     </button>
 
@@ -104,7 +106,7 @@
                     </div>
 
                     <div class="appointment2">
-                        <a href="#" class="make_apo">Make An Appointment</a>
+                        <a href="#contacts" class="make_apo">Make An Appointment</a>
                     </div>
 
 
@@ -119,7 +121,7 @@
             <div class="home_contents">
                 <h1 class="home_title box">We Care <span>About Your Health</span></h1>
                 <h3 class="subheading box">Your Health is Our Top Priority with Comprehensive, Affordable medical.</h3>
-                <p><a href="#" class="home_view_our_works">View our works</a></p>
+                <p><a href="#blogs" class="home_view_our_works">View our works</a></p>
             </div>
         </div>
         </div>
@@ -304,7 +306,7 @@
             </div>
             <div class="right">
                 <p>
-                    <a href="#">Free Consultation</a>
+                    <a href="#contacts">Free Consultation</a>
                 </p>
             </div>
         </div>
@@ -723,7 +725,7 @@
                         </a>
 
                     </div>
-                    <h3>Dr.Sunday Simfukwe</h3>
+                    <h3>Dr. NameOfDoctor</h3>
                     <h4 class="title">NEUROLOGIST</h4>
                     <p>
                         I am an ambitious workaholic, but apart from that, pretty simple person.
@@ -754,7 +756,7 @@
                         </a>
 
                     </div>
-                    <h3>Dr.Savior Simumba</h3>
+                    <h3>Dr. NameOfDoctor</h3>
                     <h4 class="title">OPHTHALMOLOGIST</h4>
                     <p>
                         I am an ambitious workaholic, but apart from that, pretty simple person.
@@ -785,7 +787,7 @@
                         </a>
 
                     </div>
-                    <h3>Dr.Eden Kasongo</h3>
+                    <h3>Dr. NameOfDoctor</h3>
                     <h4 class="title">DENTIST</h4>
                     <p>
                         I am an ambitious workaholic, but apart from that, pretty simple person.
@@ -816,7 +818,7 @@
                         </a>
 
                     </div>
-                    <h3>Dr.Chongo Simfukwe</h3>
+                    <h3>Dr. NameOfDoctor</h3>
                     <h4 class="title">PEDIATRICIAN</h4>
                     <p>
                         I am an ambitious workaholic, but apart from that, pretty simple person.
@@ -1020,6 +1022,10 @@
                         live the blind texts.</p>
                 </div>
 
+
+                <!--  -->
+
+        
                 <div class="form">
                     <div class="left">
 
@@ -1051,10 +1057,10 @@
 
                         <select id="time" name="time">
                             <option value="">Time</option>
-                            <option value="primary_care">PRIMARY CARE</option>
-                            <option value="symptom_check">SYMPTOM CHECK</option>
-                            <option value="heart_rate">HEART RATE</option>
-                            <option value="emergency_care">Emergency Care</option>
+                            <option value="primary_care">8.00 - 10.00</option>
+                            <option value="symptom_check">10.00 - 12.00</option>
+                            <option value="heart_rate">14.00 - 16.00</option>
+                            <option value="emergency_care">16.00 - 18.00</option>
                         </select>
                         <button class="appoint">Appointment</button>
                     </div>
