--- a/index.html
+++ b/index.html
@@ -393,8 +393,14 @@
                     <div class="third-coding-work">
                         <div class="frontend-development clinic">
                         </div>
-                        <h3>Clinic Website Template</h3>
+                        <h3>Clinic Website (for sale)</h3>
                         <a href="https://michaelsinkamba.com/fierotechsclinic/" target="_blank">visit site</a>
+                    </div>
+                    <div class="third-coding-work">
+                        <div class="frontend-development church">
+                        </div>
+                        <h3>Church Website (for sale)</h3>
+                        <a href="https://michaelsinkamba.com/fierotechschurch/" target="_blank">visit site</a>
                     </div>
 
                     <div class="third-coding-work">
