--- a/fierotechschurch/index.html
+++ b/fierotechschurch/index.html
@@ -118,11 +118,11 @@
 
           <p id="first">
             
-            Fiero, founder, and senior pastor of Power Embassy Chapel, is globally acknowledged as a Bible teacher, conference speaker, and bestselling author. Renowned for authentic scriptural delivery and powerful demonstrations of miracles, his ministry is characterized by fervent prayer and impactful preaching.
+            Fiero, founder, and senior pastor of Power Embassy Chapel, is globally acknowledged as a Bible teacher, conference speaker, and bestselling author. Renowned for authentic scriptural delivery and powerful demonstrations of miracles, his ministry is characterized.
           </p>
 <!--  -->
           <p id="second">
-            In addition to his on-site activities, Nashon strategically embraces the digital realm, managing a dedicated YouTube Channel and maintaining an active presence on social media. Through these online platforms, he effectively connects with both local chapel members and a diverse global audience, extending the reach of his impactful teachings and spiritual insights.
+            In addition to his on-site activities, Nashon strategically embraces the digital realm, managing a dedicated YouTube Channel and maintaining an active presence on social media. Through these online platforms, he effectively connects with both local .
           </p>
 
           <ul>
