--- a/index.html
+++ b/index.html
@@ -394,13 +394,13 @@
                         <div class="frontend-development clinic">
                         </div>
                         <h3>Clinic Website (for sale)</h3>
-                        <a href="https://michaelsinkamba.com/fierotechsclinic/" target="_blank">visit site</a>
+                        <a href="https://michaelsinkamba.com/fierotechsclinic/" target="_blank">see preview</a>
                     </div>
                     <div class="third-coding-work">
                         <div class="frontend-development church">
                         </div>
                         <h3>Church Website (for sale)</h3>
-                        <a href="https://michaelsinkamba.com/fierotechschurch/" target="_blank">visit site</a>
+                        <a href="https://michaelsinkamba.com/fierotechschurch/" target="_blank">see preview</a>
                     </div>
 
                     <div class="third-coding-work">
