--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             
               gtag('config', 'G-EJETF395TS');
             </script>
+
+<!--         google adds -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305479798393157"
+     crossorigin="anonymous"></script>
+<!--         google add tag ends -->
         
     </head>
     <body class="smooth-scroll">
