--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
         <div class="about-me">
             <div class="introduction">
-                <h2>Introduction</h2>
+                <h2 class="sub_titlez">Introduction</h2>
 
                 <p>
                     Hi, I'm Micheal Sinkamba. I love making websites and web apps exciting to use. I'm great at both
@@ -179,7 +179,7 @@
 
             <div class="personal-info">
                 <div class="tittle">
-                    <h2>Personal Info</h2>
+                    <h2 class="sub_titlez">Personal Info</h2>
                 </div>
 
                 <div class="info">
@@ -211,7 +211,7 @@
 
 
             <div class="skills">
-                <h2>Skills</h2>
+                <h2 class="sub_titlez">Skills</h2>
 
                 <div class="languages">
                     <div class="bar-holder">
@@ -253,7 +253,7 @@
 
         <div class="coding">
             <div class="sub-tittle">
-                <h2>Web</h2>
+                <h2 class="sub_titlez">Web</h2>
             </div>
 
             <div class="sub-coding">
@@ -312,8 +312,9 @@
 
         <div class="phone-repair">
             <div class="sub-tittle">
-                <h2>Irepair <p>Device servicing requires proof of ownership through a valid receipt.</p>
-                </h2>
+                <h2 class="sub_titlez">Irepair</h2>
+                     <p>Device servicing requires proof of ownership through a valid receipt.</p>
+
 
             </div>
             <div class="sub-repair">
@@ -432,7 +433,7 @@
             </div>
 
             <div class="sub-tittle">
-                <h2>Websites</h2>
+                <h2 class="sub_titlez">Websites</h2>
             </div>
 
         </div>
