added new project

--- a/index.html
+++ b/index.html
@@ -416,11 +416,20 @@
                     <h3>Clinic Website (for sale)</h3>
                     <a href="https://michaelsinkamba.com/fierotechsclinic/" target="_blank">see preview</a>
                 </div>
+                
+
                 <div class="third-coding-work">
                     <div class="frontend-development church">
                     </div>
                     <h3>Church Website (for sale)</h3>
                     <a href="https://michaelsinkamba.com/fierotechschurch/" target="_blank">see preview</a>
+                </div>
+
+                <div class="third-coding-work">
+                    <div class="frontend-development zedstores">
+                    </div>
+                    <h3>Zed Stories Blog website</h3>
+                    <a href="https://zedstories.online/" target="_blank">visit site</a>
                 </div>
 
                 <div class="third-coding-work">
