added java programming language

--- a/index.html
+++ b/index.html
@@ -233,6 +233,10 @@
                         <i class="fa-brands fa-bootstrap"></i>
                         <p>BootStrap</p>
                     </div>
+                    <div class="bar-holder">
+                        <i class="fa-brands fa-java"></i>
+                        <p>Java</p>
+                    </div>
 
                     <div class="bar-holder">
                         <i class="fa-brands fa-github"></i>
