added group us project

--- a/index.html
+++ b/index.html
@@ -435,6 +435,12 @@
                     <h3>Zed Stories Blog website</h3>
                     <a href="https://zedstories.online/" target="_blank">visit site</a>
                 </div>
+                <div class="third-coding-work">
+                    <div class="frontend-development groupus">
+                    </div>
+                    <h3>GroupUs website</h3>
+                    <a href="https://groupus.online/" target="_blank">visit site</a>
+                </div>
 
                 <div class="third-coding-work">
                     <div class="frontend-development ecommerce">
