daatbase skill added

--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
                         <i class="fa-brands fa-java"></i>
                         <p>Java</p>
                     </div>
+                    <div class="bar-holder">
+                        <!-- <i class="fa-brands fa-java"></i> -->
+                        <i class="fa-solid fa-database"></i>
+                        <p>Databases</p>
+                    </div>
 
                     <div class="bar-holder">
                         <i class="fa-brands fa-github"></i>
