updated bg color

--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
         <div class="home-image">
             <!-- <img src="./images/400x550_biggest.png" class="one" alt="Micheal Sinkamba's Image"> -->
 
-            <img src="./images/400x550 big.png" class="two" alt="Micheal Sinkamba's Image">
+            <!-- <img src="./images/400x550 big.png" class="two" alt="Micheal Sinkamba's Image"> -->
+            <!-- <img src="./images/main_image_one.png" class="two" alt="Micheal Sinkamba's Image"> -->
+            <img src="./images/main_image_two.png" class="two" alt="Micheal Sinkamba's Image">
         </div>
 
         <div class="home-personal-content">
