removed container class

--- a/prices/index.html
+++ b/prices/index.html
@@ -17,7 +17,7 @@
     <div class="zed_sotories_holder">
         <div class="watermark">FIERO TECHNOLOGIES</div>
 
-        <div class="container my-5">
+        <div class="zed_stories_holder my-5">
             <h1 class="text-center mb-4">Fiero Technologies Website Packages</h1>
             <div class="row">
                 <!-- Common Features -->
