--- a/prices/index.html
+++ b/prices/index.html
@@ -147,6 +147,12 @@
                     </div>
                 </div>
             </div>
+
+
+        <div class="note">
+            <h4>Payment Terms</h4>
+            <p>To begin work, a 50% deposit of the total package price is required. The remaining 50% is due upon completion of the project.</p>
+        </div>
         </div>
 
 
