--- a/prices/index.html
+++ b/prices/index.html
@@ -160,8 +160,14 @@
             <div class="watermark">FIERO TECHNOLOGIES</div>
             <!-- home section  landing page-->
 
+            
             <section class="contact box" id="contact">
-                <div class="ti"></div>
+                                <div class="ti">
+
+                    <h2>
+                        Talk To Us
+                    </h2>
+                </div>
 
                 <div class="contact_wrapper">
                     <div class="number brah">
